# DeepLearningForImage

./: .gitignore  AI-Agents-in-Action-Codex中文翻译版.md  README.md  README_old.md  VOC数据集制作模板.rar  gen_xml.py  gpu.py  opencv_455_release_win64.props  openni_and_opencv_release_win64.props  pyqt5_env.txt  ubuntu激活自动唤醒命令  图片重命名.py  图片重命名2.py  模型可视化graphviz.py  深度学习模型图绘制.ML Visuals by dair.ai.pptx  深度学习模型绘图-共享幻灯片.lnk  深度学习画图幻灯片.lnk  生成exe的指令.md  生成exe的指令.txt  视频截帧.py
0.3 手写数字识别/: _0 入门版完整_手写数字识别.py  _2 配对特征和标签.py  _5 回调函数.py  _9 可视化自己识别的数字.py  weights.txt
DeepLearningWithLabVIEW/: NI LabVIEW 2018 （32位）.lnk  README.md
FireDetection/: demo3_1_test-白天火焰_统计到txt中.py  getHSV.py  yinshe.py  图片合成为视频.py  视频截帧.py
FireDetection/fireDetection/DeepLearning/paddle-lite-demo/yolo_detection_demo/external_module/external_module/: CMakeLists.txt
OpenMV/: Continuous Serial Write and Read.vi  README.md  ReadUnicodeText.vi  简单的提取目标和边缘检测.py
Opencv-project/: README2.md
PyQt/: PyQt5保姆级教程-- 从入门到精通.lnk  README.md  Run_demo2.py  Run_signalDemo.py  chapter1.py  demo1.py  demo2.py  signalDemo.py  signalDemo.ui
PyQt_project/: AiqianWidget.py  AiqianWidget.ui  EGCWidget.py  EGCWidget.ui  InfoWidget.py  InfoWidget.ui  InitWidget.py  InitWidget.ui  README.md  main.py  predict11.py  yolo_predict3.py  生成诊断报告的模板.docx
PyQt_project_exe/: apprcc_rc.py  main.py  main2.py
PyQt_segmentation_tool/: README.md  SegmentationTool.py  SegmentationTool.ui  SegmentationTool_UI.py  SegmentationTool_UI_Complete.py
VOC数据集制作模板/: 2007_train.txt
env/: 3090-pytorch-gpu-env.txt  3090-tf-gpu-env.txt  conda-gpu.yml  (+5 more)
(+1959 files in other folders)
